--- a/css.css
+++ b/css.css
@@ -19,6 +19,8 @@ input{
     outline: none;
     font-size: 15px;
 }
+
+
 button{
     background-color: #55ACEE;
     border: none;
@@ -102,3 +104,18 @@ legend{
     background-color: #fff;
     cursor: pointer;
     color: black;}
+
+    .btn{
+        background-color: #55ACEE;
+        border: none;
+        padding: 15px;
+        width: 100%;
+        border-radius: 10px;
+        color: white;
+        font-size: 20px;
+    }
+    .btn:hover{
+        background-color: #fff;
+        cursor: pointer;
+        color: black;
+    }
